Header responsive and items list added

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,23 @@
 {
   "hosting": {
     "public": "build",
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
+    "headers": [
+      {
+        "source": "**/*.@(eot|gif|jpg|jpeg|js|png|svg|ttf|woff|woff2|css)",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
