--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.1",
     "firebase": "^11.0.1",
     "mongoose": "^8.8.0",
+    "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
