--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MONGODB_URL=mongodb://localhost:27017/olx-clone
 CLOUDINARY_NAME=dhshrmask
 CLOUDINARY_API_KEY=267473597431719
 CLOUDINARY_API_SECRET=-J7RwyfNaVUefh4bVkUeb9IIRzU
-PORT=5000
+SERVER_PORT=5000
