localStorage enabled and used for the userInfo and AddItem component moved to the body and signout navigation setted to / and code cleaned

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGODB_URL=mongodb://localhost:27017/olx-clone
+MONGODB_URL= mongodb+srv://midhunkpaniker:c94pYtzL5scbmkbP@olxclonecluster.nkh5d.mongodb.net/?retryWrites=true&w=majority&appName=OlxCloneCluster
+# mongodb://localhost:27017/olx-clone
 CLOUDINARY_NAME=dhshrmask
 CLOUDINARY_API_KEY=267473597431719
 CLOUDINARY_API_SECRET=-J7RwyfNaVUefh4bVkUeb9IIRzU
