--- a/.env
+++ b/.env
@@ -3,3 +3,10 @@ CLOUDINARY_NAME=dhshrmask
 CLOUDINARY_API_KEY=267473597431719
 CLOUDINARY_API_SECRET=-J7RwyfNaVUefh4bVkUeb9IIRzU
 SERVER_PORT=5000
+REACT_APP_FIREBASE_API_KEY=AIzaSyC68wP1DKgTeOMpqw8CI85wy1s1hehfFNI
+REACT_APP_FIREBASE_AUTH_DOMAIN=olx-clone-5630e.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=olx-clone-5630e
+REACT_APP_FIREBASE_STORAGE_BUCKET=olx-clone-5630e.firebasestorage.app
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=1091902646970
+REACT_APP_FIREBASE_APP_ID=1:1091902646970:web:cd3c07c868264da9073083
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-G11LDW7CTM
