--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=olx-clone-5630e.firebasestorage.app
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=1091902646970
 REACT_APP_FIREBASE_APP_ID=1:1091902646970:web:cd3c07c868264da9073083
 REACT_APP_FIREBASE_MEASUREMENT_ID=G-G11LDW7CTM
+REACT_APP_API_URL_LOCAL=http://localhost:5000
+REACT_APP_API_URL=https://olx-clone-5630e.web.app
